==> abraham120/erika2/pkg/mcu/microchip_dspic/src/ee_uart.c <==
#include <ee_irq.h>
#include "mcu/microchip_dspic/inc/ee_uart.h"
#include "mcu/microchip_dspic/inc/ee_internal.h"
#include "mcu/microchip_dspic/inc/ee_utils.h"
#define EE_Board_Uart1_Rx EE_PIN_RP25 /* default chosen for miniflex board*/
#define EE_Board_Uart1_Cts 0b11111 /* default pin at Vss */
#define EE_Board_Uart1_Tx EE_PIN_RP24 /* default chosen for miniflex board*/
#define EE_Board_Uart1_Rts EE_PIN_RP16 /* default random */
#define EE_Board_Uart2_Rx EE_PIN_RP25 /* default chosen for miniflex board */
#define EE_Board_Uart2_Cts 0b11111 /* default: pin at Vss */
#define EE_Board_Uart2_Tx EE_PIN_RP24 /* default chosen for miniflex board */
#define EE_Board_Uart2_Rts EE_PIN_RP16 /* default random */
#define EE_Board_Uart1_Rx  EE_NO_PROGRAMMABLE_PIN
#define EE_Board_Uart1_Cts EE_NO_PROGRAMMABLE_PIN
#define EE_Board_Uart1_Tx  EE_NO_PROGRAMMABLE_PIN
#define EE_Board_Uart1_Rts EE_NO_PROGRAMMABLE_PIN
#define EE_Board_Uart2_Rx  EE_NO_PROGRAMMABLE_PIN
#define EE_Board_Uart2_Cts EE_NO_PROGRAMMABLE_PIN
#define EE_Board_Uart2_Tx  EE_NO_PROGRAMMABLE_PIN
#define EE_Board_Uart2_Rts EE_NO_PROGRAMMABLE_PIN

EE_INT8 EE_uart_init(EE_UINT8 port, EE_UINT32 baud, EE_UINT16 byte_format,
             EE_UINT16 mode)
{
    if (port == EE_UART_PORT_1) {
        EE_uart1_init();
        EE_uart1_in_init(mode);
        EE_uart1_out_init(mode);
        /* baud rate */
        EE_uart1_conf_baudrate(baud);
        U1MODEbits.UARTEN = 1; /* abilito l'UART */
        if (mode == EE_UART_CTRL_FLOW) {
            U1MODEbits.RTSMD = 1;
            U1MODEbits.UEN = 2;
        } else {
            U1MODEbits.RTSMD = 0;
            U1MODEbits.UEN = 0;
        }
        /* Number of bit, Parity and Stop bits */
        U1MODE |= byte_format & 0x07;
        /* TX & RX interrupt modes */
        U1STA = 0;
        U1STAbits.UTXEN = 1;
        return 1;
    } else if (port == EE_UART_PORT_2) {
        EE_uart2_init();
        EE_uart2_in_init(mode);
        EE_uart2_out_init(mode);
        /* baud rate */
        EE_uart2_conf_baudrate(baud);

        U2MODEbits.UARTEN = 1; /* abilito l'UART */
        if (mode == EE_UART_CTRL_FLOW) {
            U2MODEbits.RTSMD = 1;
            U2MODEbits.UEN = 2;
        } else {    /* Simple Mode */
            U2MODEbits.RTSMD = 0;
            U2MODEbits.UEN = 0;
        }
        /* Number of bit, Parity and Stop bits */
        U2MODE |= byte_format & 0x07;
        /* TX & RX interrupt modes */
        U2STA = 0;
        U2STAbits.UTXEN = 1;
        return 1;
    }
    return EE_UART_ERR_BAD_PORT;
}

EE_INT8 EE_uart_set_tx_callback(EE_UINT8 port, void (*TxFunc)(void),
                EE_UINT16 txmode)
{
    if (port == EE_UART_PORT_1) {
        #ifdef EE_UART_PORT_1_ISR_ENABLE
        Tx1IsrFunction = TxFunc;
        if (TxFunc) {
            IEC0bits.U1TXIE = 0;
            U1TXREG = 0;
            U1STA &= 0x5FFF;
            U1STA |= txmode & 0xA000;
            IEC0bits.U1TXIE = 1;
            /* IFS0bits.U1TXIF = 0; EG: this is done in interrupt handler*/
        }
        return 1;
        #else
        return EE_UART_ERR_INT_DISABLED;
        #endif
    } else if (port == EE_UART_PORT_2) {
        #ifdef EE_UART_PORT_2_ISR_ENABLE
        Tx2IsrFunction = TxFunc;
        if (TxFunc) {
            IEC1bits.U2TXIE = 0;
            U2TXREG = 0;
            U2STA &= 0x5FFF;
            U2STA |= txmode & 0xA000;
            IEC1bits.U2TXIE = 1;
            /* IFS1bits.U2TXIF = 0; EG: this is done in interrupt handler*/
        }
        return 1;
        #else
        return EE_UART_ERR_INT_DISABLED;
        #endif
    }
    return EE_UART_ERR_BAD_PORT;
}

EE_INT8 EE_uart_set_rx_callback(EE_UINT8 port, void (*RxFunc)(EE_UINT8 data),
                EE_UINT16 rxmode)
{
    if (port == EE_UART_PORT_1) {
        #ifdef EE_UART_PORT_1_ISR_ENABLE
        Rx1IsrFunction = RxFunc;
        if (RxFunc) {
            IEC0bits.U1RXIE = 0;
            U1RXREG = 0;
            U1STA &= 0xFF3F;
            U1STA |= rxmode & 0x00C0;
            IEC0bits.U1RXIE = 1;
            /* IFS0bits.U1RXIF = 0; EG: this is done in interrupt handler*/
        }
        return 1;
        #else
        return EE_UART_ERR_INT_DISABLED;
        #endif
    } else if (port == EE_UART_PORT_2) {
        #ifdef EE_UART_PORT_2_ISR_ENABLE
        Rx2IsrFunction = RxFunc;
        if (RxFunc) {
            IEC1bits.U2RXIE = 0;
            U2RXREG = 0;
            U2STA &= 0xFF3F;
            U2STA |= rxmode & 0x00C0;
            IEC1bits.U2RXIE = 1;
            /* IFS1bits.U2RXIF = 0; EG: this is done in interrupt handler*/
        }
        return 1;
        #else
        return EE_UART_ERR_INT_DISABLED;
        #endif
    }
    return EE_UART_ERR_BAD_PORT;
}

EE_INT8 EE_uart_write_byte(EE_UINT8 port, EE_UINT8 data)
{
    if (port == EE_UART_PORT_1) {
        /* Polling mode */
        while (U1STAbits.UTXBF) ;
        U1TXREG = data;
        while (!U1STAbits.TRMT) ;
        return 1;
    } else if (port == EE_UART_PORT_2) {
        /* Polling mode */
        while (U2STAbits.UTXBF) ;
        U2TXREG = data;
        while (!U2STAbits.TRMT) ;
        return 1;
    }
    return EE_UART_ERR_BAD_PORT;
}

EE_INT8 EE_uart_read_byte(EE_UINT8 port, EE_UINT8 *data)
{
    if (port == EE_UART_PORT_1) {
        #ifdef EE_UART_PORT_1_ISR_ENABLE
        if (Rx1IsrFunction == NULL) {
            /* Polling mode */
        #endif
            if (U1STAbits.OERR) {
                U1STAbits.OERR = 0;
                return EE_UART_ERR_OVERFLOW;
            }
            if (U1STAbits.URXDA) {
                *data = U1RXREG & 0x00FF;
                /* U1STAbits.URXDA = 0; EG: URXDA is a read only bit!!!*/
                return 1;
            }
            return EE_UART_ERR_NO_DATA;
        #ifdef EE_UART_PORT_1_ISR_ENABLE
        }
        return EE_UART_ERR_INT_MODE;
        #endif
    } else if (port == EE_UART_PORT_2) {
        #ifdef EE_UART_PORT_2_ISR_ENABLE
        if (Rx2IsrFunction == NULL) {
            /* Polling mode */
        #endif
            if (U2STAbits.OERR) {
                U2STAbits.OERR = 0;
                return EE_UART_ERR_OVERFLOW;
            }
            if (U2STAbits.URXDA) {
                /* U2STAbits.URXDA = 0; EG: URXDA is a read only bit!!!*/
                *data = U2RXREG & 0x00FF;
                return 1;
            }
            return EE_UART_ERR_NO_DATA;
        #ifdef EE_UART_PORT_2_ISR_ENABLE
        }
        return EE_UART_ERR_INT_MODE;
        #endif
    }
    return EE_UART_ERR_BAD_PORT;
}
