==> abraham120/erika2/pkg/mcu/msp430/src/ee_uart.c <==
#include "mcu/msp430/inc/ee_uart_util.h"
#define __EE_UART_PORT_1_ISR_ENABLE__
#define setRX1Function(func) Rx1IsrFunction=func
#define setTX1Function(func) Tx1IsrFunction=func
#define setRX1Function(func)
#define setTX1Function(func)
#define setRX2Function(func) Rx2IsrFunction=func
#define setTX2Function(func) Tx2IsrFunction=func
#define setRX2Function(func)
#define setTX2Function(func)

EE_INT8 EE_uart_init(EE_UINT8 port, EE_UINT32 baud, EE_UINT16 byte_format, EE_UINT16 mode){

	if(port==EE_UART_PORT_1){
		/*Setting SWRTS bit*/
		U0CTL|=SWRST;
		/*Setting byte information*/
		U0CTL|=byte_format & EE_BYTE_FORMAT_INFO;
		/*Setting baud*/
		U0BR0=EE_UxBR0_value(baud);
		U0BR1=EE_UxBR1_value(baud);
		U0MCTL=EE_UxMCTL_value(baud);
		/*Enable module TX/RX*/
		ME1|=EE_UART_TX_RX_ENABLE_1;		
		/*Set the transmit mode information*/
		uart_mode1=mode;
		uart_mode1=uart_mode1>>8;		
		U0TCTL|=uart_mode1;
		uart_mode1=mode;

		/*Set the reading error control*/
		if(mode & EE_UART_CTRL_ERROR)
			U0RCTL|=EE_UART_SET_CTRL_ERROR;	
		/*Setting pins*/
		P3SEL|=EE_UART_SEL_TXD_RXD_1;
		P3DIR|=EE_UART_DIR_TXD_RXD_1;
		/*Resetting SWRTS bit*/
		U0CTL&=~SWRST;
		return EE_UART_NO_ERROR;
	}
	else if(port==EE_UART_PORT_2){
		/*Setting SWRTS bit*/
		U1CTL|=SWRST;
		/*Setting byte information*/
		U1CTL|=byte_format & EE_BYTE_FORMAT_INFO;
		/*Setting baud*/
		U1BR0=EE_UxBR0_value(baud);
		U1BR1=EE_UxBR1_value(baud);
		U1MCTL=EE_UxMCTL_value(baud);
		/*Enable module TX/RX*/
		ME2|=EE_UART_TX_RX_ENABLE_2;
		/*Set the transmit mode information*/
		uart_mode2=mode;
		uart_mode2=uart_mode2>>8;		
		U1TCTL|=uart_mode2;
		uart_mode2=mode;
		/*Set the reading error control*/
		if(mode & EE_UART_CTRL_ERROR)
			U1RCTL|=EE_UART_SET_CTRL_ERROR;
		
		/*Setting pins*/
		P3SEL|=EE_UART_SEL_TXD_RXD_2;
		P3DIR|=EE_UART_DIR_TXD_RXD_2;

		/*Resetting SWRTS bit*/
		U1CTL&=~SWRST;

		return EE_UART_NO_ERROR;
	}
	else 
		return EE_UART_ERR_BAD_PORT; 



}

EE_INT8 EE_uart_write_byte(EE_UINT8 port, EE_UINT8 data){


if(port==EE_UART_PORT_1){

	if(EE_UART_IS_POLLING(uart_mode1)){

		if(EE_UART_IS_TX_BLOCK(uart_mode1)){ 
		/*If polling blocking mode*/
			while((IFG1 & UTXIFG0)==0);
			U0TXBUF =data;
			return EE_UART_NO_ERROR;
			}
		else{
		 /*If only polling mode*/
		 if((IFG1 & UTXIFG0)==0)
				return EE_UART_ERR_TX_NOT_READY;
	                U0TXBUF =data;
			return EE_UART_NO_ERROR;
			
		}
	}
	/*If not polling mode*/
	return  EE_UART_ERR_INT_MODE;
}
else if(port==EE_UART_PORT_2){

	if(EE_UART_IS_POLLING(uart_mode2)){

		if(EE_UART_IS_TX_BLOCK(uart_mode2)){
		/*If polling blocking mode*/
			while((IFG2 & UTXIFG1)==0);
			U1TXBUF =data;
			return EE_UART_NO_ERROR;
		}
		else{
		/*If only polling mode*/
		 if((IFG2 & UTXIFG1)==0)
				return EE_UART_ERR_TX_NOT_READY;
	                U1TXBUF =data;
			return EE_UART_NO_ERROR;
			
		}
	}
	/*If not polling mode*/
	return  EE_UART_ERR_INT_MODE;
}
else
	return EE_UART_ERR_BAD_PORT;




}

EE_INT8 EE_uart_read_byte(EE_UINT8 port, EE_UINT8 *data){

EE_INT8 ret;
if(port==EE_UART_PORT_1){
	
	if(EE_UART_IS_POLLING(uart_mode1)){

		if(EE_UART_IS_RX_BLOCK(uart_mode1)){
			/*If polling blocking mode*/
			while((IFG1 & URXIFG0)==0);
			ret=EE_uart_ctrl_error(EE_UART_PORT_1);	
			/*In this way, read the error,save information and then read the data and the error delete*/
			*data=U0RXBUF;
			return ret; 
		}
		else{
		/*If only blocking mode*/
		 if((IFG1 & URXIFG0)==0)
				return EE_UART_ERR_RX_NOT_READY;
	                ret=EE_uart_ctrl_error(EE_UART_PORT_1);	
			*data=U0RXBUF;
			return ret;
			
		}

	}
	/*If not polling mode*/
	return  EE_UART_ERR_INT_MODE;


}
else if(port==EE_UART_PORT_2){

	if(EE_UART_IS_POLLING(uart_mode2)){
	
		if(EE_UART_IS_RX_BLOCK(uart_mode2)){
			/*If polling blocking mode*/
			while((IFG2 & URXIFG1)==0);
			ret=EE_uart_ctrl_error(EE_UART_PORT_2);	
			/*In this way, read the error,save information and then read the data and the error delete*/
			*data=U1RXBUF;
			return ret;
		}

		else{
		/*If only blocking mode*/
		 if((IFG2 & URXIFG1)==0)
				return EE_UART_ERR_RX_NOT_READY;
			
			ret=EE_uart_ctrl_error(EE_UART_PORT_2);
	                *data=U1RXBUF;
			return ret;
			
		}

	}
	/*If not polling mode*/
	return  EE_UART_ERR_INT_MODE;
}
else
	return EE_UART_ERR_BAD_PORT;






}

EE_INT8 EE_uart_set_rx_callback(EE_UINT8 port, void (*RxFunc)(EE_UINT8 data),EE_UINT8 rxmode){

	if (port == EE_UART_PORT_1) {	
		
		if(uart_mode1 & EE_UART_RX_ISR){
		/*If ISR mode*/			
			if (RxFunc) {
				/*Set function*/
				setRX1Function(RxFunc);
				/*Enable ISR and start edge*/
				IE1|=EE_UART_SET_RX_ISR_1;
				if(rxmode & EE_UART_START_EDGE)
					U0TCTL|=EE_UART_START_EDGE;
				return EE_UART_NO_ERROR;			
			}
		
			return EE_UART_ERR_FUNCTION_NULL;		

		}
		return EE_UART_ERR_INT_DISABLED;
		
	} else if (port == EE_UART_PORT_2) {

		if(uart_mode2 & EE_UART_RX_ISR){
			/*If ISR mode*/
			if (RxFunc) {
				/*Set the function*/
				setRX2Function(RxFunc);
				/*Enable ISR and start edge*/
				IE2|=EE_UART_SET_RX_ISR_2;				
				if(rxmode & EE_UART_START_EDGE)
					U1TCTL|=EE_UART_START_EDGE;
								
				
				return EE_UART_NO_ERROR;			
			}
		
			return EE_UART_ERR_FUNCTION_NULL;		

		}
		return EE_UART_ERR_INT_DISABLED;
		
	}
	return EE_UART_ERR_BAD_PORT;





}

EE_INT8 EE_uart_set_tx_callback(EE_UINT8 port, void (*TxFunc)(volatile EE_UINT8* regs),EE_UINT8 txmode){

	if (port == EE_UART_PORT_1) {	
		
		if(uart_mode1 & EE_UART_TX_ISR){
			/*If ISR function*/
			if (TxFunc) {
				/*Set the function*/
				setTX1Function(TxFunc);
				/*Enable ISR*/
				IE1|=EE_UART_SET_TX_ISR_1;
				return EE_UART_NO_ERROR;			
			}
		
			return EE_UART_ERR_FUNCTION_NULL;		

		}
		return EE_UART_ERR_INT_DISABLED;
		
	} else if (port == EE_UART_PORT_2) {

		if(uart_mode2 & EE_UART_TX_ISR){
			/*If ISR function*/

			if (TxFunc) {
				/*Set the function*/
				setTX2Function(TxFunc);
				/*Enable ISR*/
				IE2|=EE_UART_SET_TX_ISR_2;
				return EE_UART_NO_ERROR;			
			}
		
			return EE_UART_ERR_FUNCTION_NULL;		

		}
		return EE_UART_ERR_INT_DISABLED;
		
	}
	return EE_UART_ERR_BAD_PORT;


}
